--- a/style.css
+++ b/style.css
@@ -32,8 +32,23 @@ body, html {
 }
 
 .bookshelf {
-    width: 100%;
+    width: 90%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 3%;
     flex-wrap: wrap;
+}
+
+.book {
+    width: 14%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    border-radius: 5px;
+    align-items: center;
+    background-color: #372929;
+    color: white;
+    font-size: 24px;
+    padding-top: 20px;
 }
