--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    background-color: #d0d0d0;
+    background-color: #f0f0f0;
 }
 
 .append {
@@ -44,6 +44,7 @@ body, html {
     height: 300px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     margin-top: 30px;
     border-radius: 5px;
     align-items: center;
@@ -51,4 +52,14 @@ body, html {
     color: white;
     font-size: 24px;
     padding-top: 20px;
+    padding-bottom: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+h1 {
+    font-size: 24px;
+}
+
+h2 {
+    font-size: 18px;
 }
